@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 27 янв. 2016 г.
@@ -28,9 +28,10 @@ namespace lsp
     {
         ITask::ITask()
         {
-            nState  = TS_IDLE;
-            nCode   = 0;
-            pNext   = NULL;
+            pNext       = NULL;
+            pExecutor   = NULL;
+            nCode       = 0;
+            nState      = TS_IDLE;
         }
 
         ITask::~ITask()
@@ -41,6 +42,6 @@ namespace lsp
         {
             return 0;
         }
-    }
 
+    } /* namespace ipc */
 } /* namespace lsp */
